--- a/js/templates/js04.html
+++ b/js/templates/js04.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script>
-        var n1 = 100;
-        var n2 = 100.2;
-        var s1 = '"str1"';
-        var b = true;
-        var a1 = [1,2,3,4,5]; // array
-        // JSON(Javascript Object Notation)
-        var o1 = {'id':'id01', 'name':'james', 'age':30};
-        var o2 = [
-            {'id':'id01', 'name':'james', 'age':30},
-            {'id':'id01', 'name':'james', 'age':30},
-            {'id':'id01', 'name':'james', 'age':30}
-        ];
-        var u;
-        alert(typeof(o2));
+        var datas = [1,2,3,4,5];
+        var sum = 0;
 
+        /*
+        for(var i = 0; i < datas.length; i++){
+            sum += datas[i];
+        }; */
+
+        for (var i in datas){
+            sum += datas[i];
+        };
+
+        alert(sum);
     </script>
 </head>
 <body>
