--- a/js/templates/js05.html
+++ b/js/templates/js05.html
@@ -3,20 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div{
+            width:500px;
+            border: 2px solid red;
+        }
+    </style>
     <script>
-        function a(){
-            alert('a');
+        function display(ds){
+            var str = '';
+            for(var i in ds){
+                str += '<h2>';
+                str += ds[i].id + '-' + ds[i].name + '-' + ds[i].age;
+                str += '</h2>';
+            };
+            document.querySelector('#result').innerHTML = str;
         };
-        var b = function(){
-            alert('b');
+
+        function getdata(){
+           // alert();
+           datas = [
+                {'id':'id01','name':'james1','age':10},
+                {'id':'id02','name':'james2','age':20},
+                {'id':'id03','name':'james3','age':30},
+                {'id':'id04','name':'james4','age':40},
+                {'id':'id05','name':'james5','age':50}
+            ];
+            display(datas);
+
+
         };
-        a();
-        b();
 
     </script>
 </head>
 <body>
-<h1>home</h1>
+    <h1>Data List</h1>
+    <button onclick="getdata();">Get DATA</button>
+    <div id="result"></div>
 
 </body>
 </html>
