--- a/js/templates/aj04.html
+++ b/js/templates/aj04.html
@@ -5,65 +5,55 @@
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-1.7.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
 
     <script>
 
         function display(data){
-        Highcharts.chart('container', {
-
-            chart: {
-                type: 'arearange',
-                zoomType: 'x',
-                scrollablePlotArea: {
-                    minWidth: 600,
-                    scrollPositionX: 1
-                }
-            },
-
-            title: {
-                text: 'Temperature variation by day'
-            },
-
-            xAxis: {
-                type: 'datetime',
-                accessibility: {
-                    rangeDescription: 'Range: Jan 1st 2017 to Dec 31 2017.'
-                }
-            },
-
-            yAxis: {
+            Highcharts.chart('container', {
+                chart: {
+                    type: 'spline'
+                },
                 title: {
-                    text: null
-                }
-            },
+                    text: 'Monthly Average Temperature'
+                },
+                subtitle: {
+                    text: 'Source: WorldClimate.com'
+                },
+                xAxis: {
+                    categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
+                        'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                },
+                yAxis: {
+                    title: {
+                        text: 'Temperature'
+                    },
+                    labels: {
+                        formatter: function () {
+                            return this.value + '°';
+                        }
+                    }
+                },
+                tooltip: {
+                    crosshairs: true,
+                    shared: true
+                },
+                plotOptions: {
+                    spline: {
+                        marker: {
+                            radius: 4,
+                            lineColor: '#666666',
+                            lineWidth: 1
+                        }
+                    }
+                },
+                series: data
+            });
 
-            tooltip: {
-                crosshairs: true,
-                shared: true,
-                valueSuffix: '°C',
-                xDateFormat: '%A, %b %e'
-            },
-
-            legend: {
-                enabled: false
-            },
-
-            series: [{
-                name: 'Temperatures',
-                data: data
-            }]
-
-        });
-
-
-        };
+        }
 
 
         function getmaxmin(year,month){
